Fixed tiny typo

--- a/recipes/waffles.html
+++ b/recipes/waffles.html
@@ -22,7 +22,7 @@
         <li>4 teaspoons baking powder</li>
         <li>1/4 teaspoon salt</li>
         <li>1/2 teaspoon vanilla extract</li>
-        <li>onstick cooking spray</li>
+        <li>Nonstick cooking spray</li>
     </ul>
 
     <h4>Steps</h4>
