--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -15,7 +15,7 @@
     <ul>
         <li>1 cup all-purpose flour</li>
         <li>2 large eggs</li>
-        <li>1/2 cup mil</li>
+        <li>1/2 cup milk</li>
         <li>1/2 cup water</li>
         <li>1/4 teaspoon salt</li>
         <li>2 tablespoons melted butter</li>
