--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
 
 <body>
     <h1>Odin Recipes</h1>
+    <img src="./images/chefsweat" alt="The Sweaty Chef">
     <p><a href="recipes/crepes.html">Crepes</a></p>
     <p><a href="recipes/frenchtoast.html">French Toast</a></p>
     <p><a href="recipes/waffles.html">Waffles</a></p>
