--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crepes</title>
+    <title>Crepe Recipe</title>
 </head>
 <body>
     <h1>Crepes</h1>
-    <img src="../images/crepe"
+    <img src="../images/crepe" alt="Crepe">
     <p><h3>Delicious fluffy morning crepes baybeee</h3></p>
     <p>With this yummy recipe, your kids will never hate you again</p>
     <h4>Ingredients</h4>
@@ -28,5 +29,7 @@
         <li>Heat a lightly oiled griddle or frying pan over medium-high heat. Pour or scoop the batter onto the griddle, using approximately 1/4 cup for each crêpe. Tilt the pan with a circular motion so that the batter coats the surface evenly.</li>
         <li>Cook until the top of the crêpe is no longer wet and the bottom has turned light brown, 1 to 2 minutes. Run a spatula around the edge of the skillet to loosen the crêpe; flip and cook until the other side has turned light brown, about 1 minute more. Serve hot.</li>
     </ol>
+
+    <p><a href="../index.html">Click to go back</a></p>
 </body>
 </html>
