--- a/recipes/frenchtoast.html
+++ b/recipes/frenchtoast.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>French Toast</title>
+    <title>French Toast Recipe</title>
 </head>
 <body>
     <h1>French Toast</h1>
-    <img src="../images/frenchtoast">
+    <img src="../images/frenchtoast" alt="French Toast">
     <h3>Eggy af french toast boiii</h3>
     <p>You will love it more than your wife loved your best friend</p>
     <h4>Ingredients</h4>
@@ -30,5 +31,6 @@
         <li>Transfer to the hot skillet and cook until golden, 3 to 4 minutes per side.</li>
         <li>Serve hot.</li>
     </ol>
+    <p><a href="../index.html">Click to go back</a></p>
 </body>
 </html>
