--- a/recipes/waffles.html
+++ b/recipes/waffles.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Waffles</title>
+    <title>Waffles Recipe</title>
 </head>
 <body>
     <h1>Waffles</h1>
-    <img src="../images/waffle">
+    <img src="../images/waffle" alt="Waffles">
     <h3>Big ol waffle holes</h3>
     <p>If you dont love these, you dont deserve them</p>
 
@@ -31,6 +32,7 @@
         <li>Whisk eggs in a large bowl until light and fluffy. Add flour, milk, and vegetable oil and mix to combine. Whisk in sugar, then mix in baking powder, salt, and vanilla just until smooth, being careful not to overmix.</li>
         <li>Spray the preheated waffle iron with nonstick spray. Pour batter onto the hot waffle iron and cook until golden brown and the iron stops steaming, 3 to 5 minutes.</li>
     </ol>
+    <p><a href="../index.html">Click to go back</a></p>
 
 </body>
 </html>
